<resources>
    <string name="app_name">eye_app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_heading1">Kesehatan Mata</string>
    <string name="home_heading2">Tes buta warna dengan ishihara!</string>
    <string name="reminder">Reminder</string>
    <string name="home_reminder">Simulasi tes buta warna, jika ada masalah pada penglihatan warna harap konsultasikan ke tenaga medis</string>
    <string name="home_fitur">Fitur Kami</string>
    <string name="home_fitur1">Tes Buta Warna</string>
    <string name="home_fitur2">Instruksi</string>
    <string name="home_kesehatan">Jaga kesehatan mata anda!</string>
    <string name="home_tips">Tips Kesehatan Mata</string>
    <string name="home_makanan">Nutrisi untuk Mata</string>

    <string name="game_title">Color\nBlinder</string>
    <string name="game_mulai">Mulai</string>
    <string name="game_setting">Pengaturan</string>
    <string name="game_easy">Easy</string>
    <string name="game_hard">Hard</string>

    <string name="test_title">Tes Buta Warna</string>
    <string name="test_vbenar">Jumlah benar : 0</string>
    <string name="test_ket1">Keterangan 1</string>
    <string name="test_ket2">Keterangan 2</string>
    <string name="test_ket3">Keterangan 3</string>

    <string name="latihan_heading1">Latihan Mata</string>
    <string name="latihan_heading2">Tes buta warna dengan ishihara!</string>
    <string name="latihan1">Palming</string>
    <string name="latihan2">Mulai berkedip dan berdetak</string>
    <string name="latihan3">Gerakan mata</string>
    <string name="latihan4">Zig-zag</string>
    <string name="latihan5">Flower effect</string>
    <string name="latihan6">Fokus dekat &amp; jauh</string>

    <string name="latihan1_title">Palming Exercise</string>
    <string name="instruksi_title">Instruksi</string>
    <string name="instruksi1">Tutupi mata dengan telapak tangan</string>
    <string name="instruksi2">Jangan memberi tekanan pada mata</string>
    <string name="instruksi3">Ulangi latihan ini tiga kali sehari saat bekerja dengan perangkat digital.</string>
    <string name="manfaat_title">Manfaat</string>
    <string name="manfaat1"> Merilekskan mata</string>
    <string name="manfaat2">Menenangkan pikiran</string>
    <string name="manfaat3">Menigkatkan penglihatan</string>

    <string name="Score">Score</string>
    <string name="HighScore">High Score</string>
    <string name="HighScore_val">HS_val</string>
    <string name="NewHighScore">New High Score!!</string>
    <string name="GameOver">Game Over!</string>
    <string name="TryAgain">Try Again</string>
    <string name="MainMenu">Main Menu</string>
    <string name="time">time</string>
    <string name="difficulty_easy">Difficulty Easy</string>
    <string name="difficulty_hard">Difficulty Hard</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="play">Play</string>
    <string name="setting">settings</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="moving">Moving</string>
    <string name="EasyHighScore">High Score Easy</string>
    <string name="HardHighScore">High Score Hard</string>
    <string name="resume">Resume</string>
    <string name="cd_back_button">Back Button</string>
    <string name="cd_gambar_latihan">Gambar Latihan</string>
    <string name="colblind">ColBlind</string>

    <string name="pause">Pause</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="button5">Button 5</string>
    <string name="button6">Button 6</string>
    <string name="button7">Button 7</string>
    <string name="button8">Button 8</string>
    <string name="button9">Button 9</string>
    <string name="button10">Button 10</string>
    <string name="button11">Button 11</string>
    <string name="button12">Button 12</string>
    <string name="button13">Button 13</string>
    <string name="button14">Button 14</string>
    <string name="button15">Button 15</string>
    <string name="button16">Button 16</string>
</resources>