<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Test.TestActivity">

    <ScrollView
        android:id="@+id/content_latihan1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/latihan1_nav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_top"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="24dp"
                android:paddingVertical="53dp">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/cd_back_button"
                    android:layout_marginEnd="13dp"
                    android:background="@drawable/ic_back" />

                <TextView
                    android:id="@+id/latihan_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:fontFamily="@font/plusjakartasans_semibold"
                    tools:text="@string/latihan1_title" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/latihan1_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingVertical="28dp">

                <TextView
                    android:id="@+id/instruksi_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/instruksi_title"
                    android:fontFamily="@font/plusjakartasans_semibold"
                    android:textColor="@color/blue_text"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/instruksi_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginBottom="36dp"
                    android:text="@string/instruksi3"
                    android:textColor="@color/black_text"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/latihan_gambar"
                    android:layout_width="match_parent"
                    android:layout_height="115dp"
                    android:contentDescription="@string/cd_gambar_latihan"
                    android:layout_marginHorizontal="42dp"
                    android:layout_marginBottom="32dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/manfaat_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/manfaat_title"
                    android:fontFamily="@font/plusjakartasans_semibold"
                    android:textColor="@color/blue_text"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/manfaat_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginBottom="36dp"
                    android:text="@string/instruksi3"
                    android:textColor="@color/black_text"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />
</RelativeLayout>
