<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ScrollView
        android:id="@+id/content_isi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"
        android:scrollbars="none"
        android:paddingHorizontal="22dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="46dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:layout_weight="1"
                        android:text="@string/home_heading1"
                        android:fontFamily="@font/plusjakartasans_bold"
                        android:textColor="@color/blue_text"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/home_heading2"
                        android:fontFamily="@font/plusjakartasans_regular"
                        android:textColor="@color/grey_text"
                        android:textSize="12sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="132dp"
                    android:layout_height="122dp"
                    android:background="@drawable/gambar_home"
                    android:orientation="vertical">
                </ImageView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="29dp"
                android:background="@drawable/bg_card"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="28dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="19dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_reminder" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_text"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:paddingVertical="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reminder"
                            android:fontFamily="@font/plusjakartasans_medium"
                            android:textColor="@color/black_text"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home_reminder"
                    android:fontFamily="@font/plusjakartasans_medium"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="19dp"
                android:text="@string/home_fitur"
                android:fontFamily="@font/plusjakartasans_semibold"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/opsi_fitur1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="29dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/fitur1"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_fitur"
                    android:elevation="80dp"
                    android:orientation="vertical"
                    android:paddingVertical="23dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="50dp"
                        android:layout_marginBottom="26dp"
                        android:background="@drawable/ic_fitur1"
                        android:orientation="vertical">
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:text="@string/home_fitur1"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:textColor="@color/black_text"
                        android:textSize="12sp" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/fitur2"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_fitur"
                    android:elevation="80dp"
                    android:orientation="vertical"
                    android:paddingVertical="23dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="26dp"
                        android:background="@drawable/ic_fitur2"
                        android:orientation="vertical">
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:layout_marginLeft="12dp"
                        android:text="@string/home_fitur2"
                        android:gravity="center"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:textColor="@color/black_text"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="19dp"
                android:text="@string/home_kesehatan"
                android:fontFamily="@font/plusjakartasans_semibold"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/opsi_fitur2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="24dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tips"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_fitur"
                    android:elevation="80dp"
                    android:orientation="vertical"
                    android:paddingVertical="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_tips"
                        android:orientation="vertical">
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="27dp"
                        android:layout_weight="1"
                        android:text="@string/home_tips"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:textAlignment="center"
                        android:textColor="@color/black_text"
                        android:textSize="12sp" />
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/makanan_sehat"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_fitur"
                    android:elevation="80dp"
                    android:orientation="vertical"
                    android:paddingVertical="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="48dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/ic_food"
                        android:orientation="vertical">
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="29dp"
                        android:layout_weight="1"
                        android:text="@string/home_makanan"
                        android:fontFamily="@font/plusjakartasans_medium"
                        android:textAlignment="center"
                        android:textColor="@color/black_text"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemActiveIndicatorStyle="@style/CustomNav"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"
        app:itemTextColor="@color/bottom_nav_color"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextAppearanceActive="@style/BottomNavigationViewActiveTextAppearance"
        app:itemTextAppearanceInactive="@style/BottomNavigationViewInactiveTextAppearance" />

</LinearLayout>