<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuGameActivity">
    <ScrollView
        android:id="@+id/content_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/blue"
        android:paddingTop="72dp"
        android:paddingBottom="24dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ic_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/game_title"
                android:layout_marginBottom="19dp"
                android:layout_marginHorizontal="99dp"
                android:orientation="vertical">
            </ImageView>
            <TextView
                android:id="@+id/game_title"
                android:textColor="@color/white"
                android:textSize="53.752288818359375sp"
                android:layout_marginBottom="59dp"
                android:layout_marginHorizontal="80dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/game_title"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/playbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_mulai"
                android:layout_marginVertical="8dp"
                android:textColor="@color/light_blue"
                android:textSize="34sp"
                android:textAllCaps="false"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:padding="20dp"
                android:background="@drawable/bg_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_setting"
                android:layout_marginVertical="8dp"
                android:textColor="@color/light_blue"
                android:textSize="34sp"
                android:textAllCaps="false"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:padding="20dp"
                android:background="@drawable/bg_text" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/diff_tab"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/transparent"
                android:soundEffectsEnabled="false"
                app:tabBackground="@drawable/track_selector"
                app:tabGravity="fill"
                app:tabIndicatorColor="@android:color/transparent"
                app:tabIndicatorHeight="0dp"
                app:tabMode="fixed"
                app:tabRippleColor="@android:color/transparent"
                app:tabSelectedTextColor="@color/light_blue"
                android:gravity="center_horizontal"
                app:tabTextAppearance="@style/CustomTabTextAppearance"
                app:tabTextColor="@android:color/white">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:soundEffectsEnabled="false"
                    android:text="@string/game_easy"
                    tools:ignore="TouchTargetSizeCheck" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:soundEffectsEnabled="false"
                    android:text="@string/game_hard" />
            </com.google.android.material.tabs.TabLayout>

            <RelativeLayout
                android:id="@+id/renk1vqj16x"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="98dp"
                android:clipChildren="false"
                android:clipToPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:gravity="end"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/rv063s6nh4ep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_bottom"
                        android:orientation="vertical">
                    </ImageView>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/white"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"
        app:itemActiveIndicatorStyle="@color/transparent"
        app:itemTextColor="@color/bottom_nav_color"
        app:itemIconTint="@color/bottom_nav_color"/>
</LinearLayout>